--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <script src="../../storage/js/cloak.js"></script>
 
     <meta charset="utf-8" />
-    <script src="js/googleAnalytics.js"></script>
-    <script src="lib/jquery.min.js"></script>
-    <script src="js/IronSourceRV.js"></script>
-    <script src="js/mobileRedirect.js"></script>
-    <script src="js/fullscreen.js"></script>
+    <script src="googleAnalytics.js"></script>
+    <script src="jquery.min.js"></script>
+    <script src="IronSourceRV.js"></script>
+    <script src="mobileRedirect.js"></script>
+    <script src="fullscreen.js"></script>
     <script>
       var gameLoaded = false;
       window.addEventListener("beforeunload", function (e) {
@@ -33,9 +33,9 @@
       };
     </script>
     <link rel="icon" type="image/png" href="favicon.png?v2" />
-    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-    <script type="text/javascript" src="js/sdkloader/ima3.js"></script>
+    <script type="text/javascript" src="ima3.js"></script>
 
     <!-- ZONETAG - PLACE INTO HEAD SECTION OR RUN CODE AT STARTUP -->
     <script>
